Bug 501938 - "Add action" dialog from clipboard config window is modal dialog and blocks plasmashell
Summary: "Add action" dialog from clipboard config window is modal dialog and blocks p...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.3.3
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 440357 (view as bug list)
Depends on:
Blocks: 504615
  Show dependency treegraph
 
Reported: 2025-03-24 13:03 UTC by Damglador
Modified: 2025-10-16 03:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Damglador 2025-03-24 13:03:47 UTC
SUMMARY
If I go to clipboard settings, go to actions and add action, the window that opens and darkens the main settings window blocks me from interacting with panels or desktop in any way, I still can interact with other windows. This is not exclusive to clipboard settings, I've seen it somewhere else, but forgot to report it.

STEPS TO REPRODUCE
1. Open clipboard settings (right click on clipboard in tray or clipboard widget - settings)
2. Go to Actions
3. Click Add action
4. Try to interact with panels or desktop

OBSERVED RESULT
Can't interact with panels or desktop

EXPECTED RESULT
Should be able to

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.13.7-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor 1: AMD Radeon Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3060 Laptop GPU

ADDITIONAL INFORMATION
Comment 1 Niccolò Venerandi 2025-03-25 18:34:54 UTC
Can confirm
Comment 2 Nate Graham 2025-03-25 23:20:21 UTC
This happens because those are modal dialog windows, and by design, modal dialogs block the parent app until you interact with them and make them go away.

In this case, the parent app is plasmashell.

From a technical perspective, this is intentional and not a bug. If blocking all of plasmashell is considered bad, we should make it not be a modal dialog.
Comment 3 Bug Janitor Service 2025-05-22 20:31:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5516
Comment 4 Nate Graham 2025-05-22 20:51:16 UTC
Git commit 30c0703860e8e943999152e141bb44c62ee1c038 by Nate Graham.
Committed on 22/05/2025 at 20:27.
Pushed by ngraham into branch 'master'.

klipper: make "Add Actions" dialog only window-modal

Otherwise it blocks all of plasmashell while it's open.
FIXED-IN: 6.3.6

M  +1    -0    klipper/editactiondialog.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/30c0703860e8e943999152e141bb44c62ee1c038
Comment 5 Nate Graham 2025-05-22 20:58:30 UTC
Git commit bf67f25676d4d9777d888b6576127d368af66cb7 by Nate Graham.
Committed on 22/05/2025 at 20:58.
Pushed by ngraham into branch 'Plasma/6.3'.

klipper: make "Add Actions" dialog only window-modal

Otherwise it blocks all of plasmashell while it's open.
FIXED-IN: 6.3.6


(cherry picked from commit 30c0703860e8e943999152e141bb44c62ee1c038)

Co-authored-by: Nate Graham <nate@kde.org>

M  +1    -0    klipper/editactiondialog.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/bf67f25676d4d9777d888b6576127d368af66cb7
Comment 6 Nate Graham 2025-05-23 03:11:20 UTC
Git commit 2a8cdff96d326536bab6dcd4db7beb33a62e3488 by Nate Graham.
Committed on 22/05/2025 at 20:52.
Pushed by ngraham into branch 'Plasma/6.4'.

klipper: make "Add Actions" dialog only window-modal

Otherwise it blocks all of plasmashell while it's open.
FIXED-IN: 6.3.6


(cherry picked from commit 30c0703860e8e943999152e141bb44c62ee1c038)

Co-authored-by: Nate Graham <nate@kde.org>

M  +1    -0    klipper/editactiondialog.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2a8cdff96d326536bab6dcd4db7beb33a62e3488
Comment 7 Nate Graham 2025-10-16 03:02:39 UTC
*** Bug 440357 has been marked as a duplicate of this bug. ***