klipper: make "Add Actions" dialog only window-modal

Otherwise it blocks all of plasmashell while it's open.

BUG: 501938
FIXED-IN: 6.3.6